# django-starter

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: settings.py
config/settings/: base.py  prod.py
gunicorn/: gunicorn.service
