[project]
name = "django-starter"
description = "This is a starter for building Django web apps"
version = "0.1.0"
dependencies = ["Django==4.2.*", "gunicorn"]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "flake8"]

[tool.setuptools]
packages = ["config", "apps"]

[tool.hatch.version]
path = "config/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["config", "apps"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "black",
  "isort",
  "flake8",
]

# fin du message